--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.profiles.active=test
 spring.jpa.open-in-view=false
 
+# app credentials
 security.client-id=${CLIENT_ID:myclientid}
 security.client-secret=${CLIENT_SECRET:myclientsecret}
 
+# jwt é o formato de token mais adotado
 security.jwt.duration=${JWT_DURATION:86400}
 
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173}
